# tauri-obs

./: .gitignore  Cargo.toml  index.html  package.json  vite.config.ts
src/: App.vue  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs  obs.rs  winit.rs
src-tauri/src/obs/: data.rs  display.rs  module.rs  scene.rs  settings.rs  source.rs  string.rs
src/components/: Greet.vue  Scenes.vue
