[package]
name = "myobs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
obs-wrapper = { git = "https://github.com/bennetthardwick/rust-obs-plugins" }
tauri-plugin-store = "2.0.0-beta"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dirs = "5.0.1"
walkdir = "2.5.0"
