[package]
name = "myobs"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
obs-wrapper = { git = "https://github.com/bennetthardwick/rust-obs-plugins" }
tauri-plugin-store = "2.0.0-beta"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dirs = "5.0.1"
walkdir = "2.5.0"
thiserror = "1.0.58"
derivative = "2.2.0"
derive_more = "0.99.17"
serde_repr = "0.1.18"
uuid = { version = "1.8.0", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
# TODO: https://github.com/servo/core-foundation-rs/pull/228
uuid_for_cf = { package = "uuid", version = "0.5" }
core-foundation = { version = "0.9.4", features = ["with-uuid"] }
